--- a/settings.gradle
+++ b/settings.gradle
@@ -21,5 +21,5 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-include ':app', ':maplib', ':maplibui'
+include ':app', ':maplib', ':maplibui', ':easypicker'
 include ':wizardpager'
