--- a/gradle.properties
+++ b/gradle.properties
@@ -41,3 +41,5 @@
 # org.gradle.parallel=true
 android.enableJetifier=true
 android.useAndroidX=true
+android.nonFinalResIds=false
+enableOnBackInvokedCallback=true
