--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.nextgis.mobile"
     android:installLocation="auto"
     >
 
@@ -103,7 +102,10 @@
             android:label="@string/app_name" />
         <activity
             android:name=".activity.SettingsActivity"
-            android:label="@string/action_settings" />
+            android:label="@string/action_settings"
+            android:theme="@style/AppTheme"
+
+            />
         <activity
             android:name="com.nextgis.maplibui.activity.NGWSettingsActivity"
             android:label="@string/ngw_accounts" />
