--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ android {
         minSdkVersion 26
         compileSdk 34
         targetSdkVersion 34
-        versionCode 134
-        versionName '2.8.0'
+        versionCode 138
+        versionName '2.9.1'
         archivesBaseName = "ngmobile-$versionName"
         buildConfigField "String", "SENTRY_DSN", "\"${sentryDsn}\""
     }
@@ -108,8 +108,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_16
+        targetCompatibility JavaVersion.VERSION_16
     }
 
 
@@ -136,7 +136,7 @@ dependencies {
     }
     implementation 'com.google.android.gms:play-services-analytics:18.1.0'
 //    implementation 'com.github.TechFreak:WizardPager:1.0.3'
-    implementation 'com.android.volley:volley:1.2.1'
+    //implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6'
