--- a/settings.gradle
+++ b/settings.gradle
@@ -21,5 +21,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-include ':app', ':maplib', ':maplibui', ':easypicker'
+include ':app', ':maplib', ':maplibui'
 include ':wizardpager'
+include ':easypicker-module'
+project(':easypicker-module').projectDir = new File(rootDir, 'easypicker/easypicker')
