--- a/gradle.properties
+++ b/gradle.properties
@@ -43,3 +43,4 @@ android.enableJetifier=true
 android.useAndroidX=true
 android.nonFinalResIds=false
 enableOnBackInvokedCallback=true
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
